# pbrain

./: AGENTS.md  NOTICE  README.md  pyproject.toml
docs/: AUDIT_V0_2.md  COMMAND_CONTRACT.md  DOMAIN_AGENT_ARCHITECTURE.md  MEMORY_AND_ATTENUATION_REVIEW.md  SUBAGENT_UX_AUDIT.md  UX_SUBAGENT_HARNESS_PLAN.md  UX_SUBAGENT_SMOKE_REPORT.md  V1_1_PILLAR_REPORT.md  anki.md  architecture.md  concepts.md  development.md  evidence.md  examples.md  llm-providers.md  mcp.md  notes.md  product-control.md  quickstart.md  terminal-fonts.md  vaults.md
personas/: accountability-avoider.yaml  ambiguous-milestone-founder.yaml  chronic-drifter.yaml  german-learner.yaml  math-hobbyist.yaml  overwhelmed-planner.yaml  review-driven.yaml  rust-developer.yaml  thought-dumper.yaml  what-now-user.yaml
scripts/: aggressive_test.py  check_service_imports.py  dev_setup.sh  run_subagents.py  scaffold_generator.py  test_vertex.py
src/pb/: __init__.py  events.py  runtime.py  study_service.py
src/pb/adapters/: __init__.py
src/pb/agents/: __init__.py  accountability.py  base.py  colors.py  domain.py  review.py  spawner.py
src/pb/ai/: __init__.py  service.py
src/pb/capture/: __init__.py  server.py
src/pb/cli/: __init__.py  active_session.py  command_runner.py  console.py  context.py  context_args.py  context_runtime.py  display.py  glow_style.json  helpers.py  input_router.py  learning_flow.py  llm_guard.py  main.py  markdown.py  normalize.py  pickers.py  preview.py  shell.py  task_scoring.py  topic_group.py
src/pb/core/: __init__.py  action_routing.py  adjacency.py  agent_instruction_judge.py  agent_weights.py  (+77 more)
(+145 files in other folders)
