[project]
name = "productivebrain"
version = "0.1.0"
description = "Terminal-native study and deliberate-practice system"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "structlog>=24.1.0",
    "tomli>=2.0.1",
    "pydantic>=2.5.0",
    "mcp>=1.27.0",
    "cryptography>=46.0.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "google-genai>=1.0.0",
    "kaggle>=2.1.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "genanki",
    "prompt-toolkit>=3.0.52",
    "sqlite-vec>=0.1.9",
    "google-cloud-storage>=2.0.0",
    "watchdog>=6.0.0",
]

[project.scripts]
pb = "pb.cli.main:run_app"
brain = "pb.cli.main:run_app"
productivebrain-mcp = "pb.mcp.server:main"
pb-mcp = "pb.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pb"]
include = [
    "/src/pb/domain_packs/*.yaml",
    "/src/pb/templates/*.md",
    "/src/pb/cli/glow_style.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pb",
    "/tests",
    "/docs",
    "/README.md",
    "/NOTICE",
    "/LICENSE",
    "/AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
